# OOPS

maxwell/: CMakeLists.txt
maxwell/include/: maxwell.h  maxwellparameters.h  maxwellparser.h
maxwell/pars/: maxwell.par
maxwell/scripts/: maxwell.json
maxwell/src/: main.cpp  maxwell.cpp  maxwellparser.cpp
